--- a/gatos.html
+++ b/gatos.html
@@ -22,15 +22,15 @@
     <br>
     <br>
     <Center><img src="GATO1.jpg" alt="Cliqueame"></Center>
-    <Center><a href=""></a> Joadiño</a></Center>
+    <Center><a href=""> Joadiño</a></Center>
     <br>
     <br>
     <Center><img src="GATO2.jpg" alt="Cliqueame"/></Center>
-    <Center><a href=""></a> Jony boy</a></Center>
+    <Center><a href=""> Jony boy</a></Center>
     <br>
     <br>
     <Center><img src="GATO3.jpg" alt="Cliqueame"></Center>
-    <Center><a href=""></a> Maximiliano</a></Center>
+    <Center><a href=""> Maximiliano</a></Center>
     <br>
     <br>
     
