--- a/pedro.html
+++ b/pedro.html
@@ -7,12 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <center><h1>Joadiño!</h1></center>
+    <center><h1>Pedro</h1></center>
     <br>
     <br>
-    <Center><img src="GATO1.jpg" alt="Cliqueame"></Center>
-    <center><h2>Joadiño</h3></center>
-    <center><h3></center>
+    <Center><img src="perro1.jfif" alt="Cliqueame"></Center>
+    <center><h3>Descripcion del Pedro</h3></center>
     
 </body>
 </html>
