--- a/gatos.html
+++ b/gatos.html
@@ -13,24 +13,24 @@
     <br>
     <Center><h1>Nuestro gatos que buscan familia!</h1></Center>
     <br>
-    <Center><h5>Es una organización sin fines de lucro, dedicada al rescate, 
+    <Center><parrafo><h5>Es una organización sin fines de lucro, dedicada al rescate, 
         rehabilitación y reubicación de gatos abandonados. Realiza, operativos 
         de esterilización y jornadas de adopción todas las semanas. Todos los gatos 
         que entrega están esterilizados desde los dos meses de edad. Mantiene dos albergues 
         de gatos y una red de hogares temporales, que acogen a los gatos rescatados 
-        en espera de su adopción definitiva. </h5></Center>   
+        en espera de su adopción definitiva. </h5></parrafo></Center>   
     <br>
     <br>
     <Center><img src="GATO1.jpg" alt="Cliqueame"></Center>
-    <Center><a href=""> Joadiño</a></Center>
+    <Center><a href="Joadiño.html"> Joadiño</a></Center>
     <br>
     <br>
     <Center><img src="GATO2.jpg" alt="Cliqueame"/></Center>
-    <Center><a href=""> Jony boy</a></Center>
+    <Center><a href="Jonyboy.html"> Jony boy</a></Center>
     <br>
     <br>
     <Center><img src="GATO3.jpg" alt="Cliqueame"></Center>
-    <Center><a href=""> Maximiliano</a></Center>
+    <Center><a href="maximiliano.html"> Maximiliano</a></Center>
     <br>
     <br>
     
