--- a/juan.html
+++ b/juan.html
@@ -7,12 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <center><h1>Joadiño!</h1></center>
+    <center><h1>Juan</h1></center>
     <br>
     <br>
-    <Center><img src="GATO1.jpg" alt="Cliqueame"></Center>
-    <center><h2>Joadiño</h3></center>
-    <center><h3></center>
-    
+    <Center><img src="perro2.jpg" alt="Cliqueame"></Center>
+    <center><h3>Descripcion del Juan</h3></center>
 </body>
 </html>
