perfil de perro
estan listos los perfiles de los perros

--- a/diego.html
+++ b/diego.html
@@ -12,6 +12,13 @@
     <br>
     <Center><img src="perro3.jfif" alt="Cliqueame"></Center>
     <center><h3>Descripcion del Diego</h3></center>
+    <center><texto>sexo: masculino</texto></center>
+    <br>
+    <center><texto>edad: 4 meses</texto></center>
+    <br>
+    <center><texto>esterilizado: no</texto></center>
+    <br>
+    <center><texto>chip de rastreo: 8768</texto></center>
     
 </body>
 </html>
