--- a/juan.html
+++ b/juan.html
@@ -12,5 +12,12 @@
     <br>
     <Center><img src="perro2.jpg" alt="Cliqueame"></Center>
     <center><h3>Descripcion del Juan</h3></center>
+    <center><texto>sexo: masculino</texto></center>
+    <br>
+    <center><texto>edad: 2 meses</texto></center>
+    <br>
+    <center><texto>esterilizado: no</texto></center>
+    <br>
+    <center><texto>chip de rastreo: 6754</texto></center>
 </body>
 </html>
