--- a/pantallaprincipal.html
+++ b/pantallaprincipal.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <center><h1><titulo>ONG-ayuda aun peludo</titulo></h1></center>
+    <center><h1><titulo>ong- ayuda aun peludo</titulo></h1></center>
     <br>
     <br>
     <center><parrafo>Una ONG “Ayuda a un peludo” que trabaja con la adopción de animales que viven en la calle,<br>
