--- a/pedro.html
+++ b/pedro.html
@@ -12,6 +12,14 @@
     <br>
     <Center><img src="perro1.jfif" alt="Cliqueame"></Center>
     <center><h3>Descripcion del Pedro</h3></center>
-    
+    <br>
+    <br>
+    <center><texto>sexo: masculino</texto></center>
+    <br>
+    <center><texto>edad: 3 meses</texto></center>
+    <br>
+    <center><texto>esterilizado: no</texto></center>
+    <br>
+    <center><texto>chip de rastreo: 5432</texto></center>
 </body>
 </html>
