Perfiles de gatos listos
y centre los textos e imagenes de la pantalla principal

--- a/Joadiño.html
+++ b/Joadiño.html
@@ -11,8 +11,17 @@
     <br>
     <br>
     <Center><img src="GATO1.jpg" alt="Cliqueame"></Center>
-    <center><h2>Joadiño</h3></center>
     <center><h3></center>
+    <center><h3>Descripcion del Joadiño</h3></center>
+    <center><texto>sexo: masculino</texto></center>
+    <br>
+    <center><texto>edad: 3 meses</texto></center>
+    <br>
+    <center><texto>esterilizado: si</texto></center>
+    <br>
+    <center><texto>chip de rastreo: 6754</texto></center>
+    <br>
+    <br>
     
 </body>
 </html>
