--- a/Jonyboy.html
+++ b/Jonyboy.html
@@ -11,7 +11,16 @@
     <br>
     <br>
     <Center><img src="GATO2.jpg" alt="Cliqueame"/></Center>
-    <center><h3>Descripcion del GATO2</h3></center>
+    <center><h3>Descripcion del Jonyboy</h3></center>
+    <center><texto>sexo: masculino</texto></center>
+    <br>
+    <center><texto>edad: 2 meses</texto></center>
+    <br>
+    <center><texto>esterilizado: si</texto></center>
+    <br>
+    <center><texto>chip de rastreo: 1452</texto></center>
+    <br>
+    <br>
     
 </body>
 </html>
