--- a/pantallaprincipal.html
+++ b/pantallaprincipal.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <center><h1><titulo>ong- ayuda aun peludo</titulo></h1></center>
+    <center><h1><titulo>Ong- Ayuda aun peludo</titulo></h1></center>
     <br>
     <br>
     <center><parrafo>Una ONG “Ayuda a un peludo” que trabaja con la adopción de animales que viven en la calle,<br>
@@ -16,17 +16,20 @@
         de los animalitos que están disponibles para su adopción. </parrafo></center>
         <br>
         <br>
-    <titulo>Encargados:</titulo><br>
-    <parrafo2>Luis Huircan - Cargo: Veterinario.<br>Maximiiano Urrejola - Cargo: Rescatista.</parrafo2> 
+    <center><titulo>Encargados:</titulo></center>
+    <br>
+    <center><parrafo2>Luis Huircan - Cargo: Veterinario.
+    <br> Maximiiano Urrejola - Cargo: Rescatista.</parrafo2></center> 
     <br>
     <br>
-    <title2>nuestra seccion de ayuda:</title2><br>
-    <a><img src="perro1.jfif"alt="perro"></a>
-    <a href="perros.html"><br><br>perros</a>
+    <center><title2>Nuestra seccion de ayuda:</title2></center>
+    <br>
+    <center><a><img src="perro1.jfif"alt="perro"></a></center>
+    <center><a href="perros.html"><br><br>perros</a></center>
     <br>
     <br>
-    <a><img src="gato1.jfif"alt="perro"></a> <a href="gatos.html"></a> 
-    <a href="gatos.html"><br><br>gatos</a>
+    <center><a><img src="gato1.jfif"alt="perro"></a> <a href="gatos.html"></a></center> 
+    <center><a href="gatos.html"><br><br>gatos</a></center>
     <br>
     <br>
    
