--- a/perros.html
+++ b/perros.html
@@ -14,8 +14,8 @@
     <Center><h1>Nuestro perros que buscan familia!</h1></Center>
     <br>
     <Center><h5>Es una organización sin fines de lucro, dedicada al rescate, 
-        rehabilitación y reubicación de gatos abandonados. Realiza, operativos 
-        de esterilización y jornadas de adopción todas las semanas. Todos los gatos 
+        rehabilitación y reubicación de Perros abandonados. Realizamos, operativos 
+        de esterilización y jornadas de adopción todas las semanas. Todos los perros 
         que entrega están esterilizados desde los dos meses de edad. Mantiene dos albergues 
         de gatos y una red de hogares temporales, que acogen a los gatos rescatados 
         en espera de su adopción definitiva. </h5></Center>   
