--- a/maximiliano.html
+++ b/maximiliano.html
@@ -11,7 +11,16 @@
     <br>
     <br>
     <Center><img src="GATO3.jpg" alt="Cliqueame"></Center>
-    <center><h3>Descripcion del GATO3</h3></center>
+    <center><h3>Descripcion del Joadiño</h3></center>
+    <center><texto>sexo: masculino</texto></center>
+    <br>
+    <center><texto>edad: 2 meses</texto></center>
+    <br>
+    <center><texto>esterilizado: no </texto></center>
+    <br>
+    <center><texto>chip de rastreo: 1984</texto></center>
+    <br>
+    <br>
     
 </body>
 </html>
