--- a/pantallaprincipal.html
+++ b/pantallaprincipal.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <center><h1><titulo>Ong- Ayuda aun peludo</titulo></h1></center>
@@ -32,6 +33,11 @@
     <center><a href="gatos.html"><br><br>gatos</a></center>
     <br>
     <br>
+    <nav>
+        <a href="" class="nav-link">inicio</a>
+        <a href="" class="nav-link">inscripciones</a>
+        <a href="" class="nav-link">contactos</a>
+    </nav>
    
    
 </body>
