--- a/diego.html
+++ b/diego.html
@@ -10,7 +10,7 @@
     <center><h1>Diego</h1></center>
     <br>
     <br>
-    <Center><img src="perro3.jfif" alt="Cliqueame"></Center>
+    <Center><img src="img/perro3.jfif" alt="Cliqueame"></Center>
     <center><h3>Descripcion del Diego</h3></center>
     <center><texto>sexo: masculino</texto></center>
     <br>
