--- a/maximiliano.html
+++ b/maximiliano.html
@@ -10,7 +10,7 @@
     <center><h1>Maximiliano!</h1></center>
     <br>
     <br>
-    <Center><img src="GATO3.jpg" alt="Cliqueame"></Center>
+    <Center><img src="img/GATO3.jpg" alt="Cliqueame"></Center>
     <center><h3>Descripcion del Joadiño</h3></center>
     <center><texto>sexo: masculino</texto></center>
     <br>
