--- a/pantallaprincipal.html
+++ b/pantallaprincipal.html
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+    <header>
+        <a href="#" class="logo">
+            <img src="imagenes/logo.png" alt="logo del gym">
+            <h2 class="nombre del gimnacio">omg-ayuda a un peludo</h2>
+        </a>
     <center><h1><titulo>Ong- Ayuda aun peludo</titulo></h1></center>
     <br>
     <br>
@@ -25,11 +30,11 @@
     <br>
     <center><title2>Nuestra seccion de ayuda:</title2></center>
     <br>
-    <center><a><img src="perro1.jfif"alt="perro"></a></center>
+    <center><a><img src="img/perro1.jfif"alt="perro"></a></center>
     <center><a href="perros.html"><br><br>perros</a></center>
     <br>
     <br>
-    <center><a><img src="gato1.jfif"alt="perro"></a> <a href="gatos.html"></a></center> 
+    <center><a><img src="img/GATO1.jpg"alt="perro"></a> <a href="gatos.html"></a></center> 
     <center><a href="gatos.html"><br><br>gatos</a></center>
     <br>
     <br>
@@ -38,6 +43,7 @@
         <a href="" class="nav-link">inscripciones</a>
         <a href="" class="nav-link">contactos</a>
     </nav>
+    </header>
    
    
 </body>
