--- a/Joadiño.html
+++ b/Joadiño.html
@@ -7,19 +7,23 @@
     <title>Document</title>
 </head>
 <body>
-    <center><h1>Joadiño!</h1></center>
+    <header>
+        <a href="#" class="logo">
+            <img src="imagenes/logo.png" alt="logo del gym">
+            <h2 class="nombre del gimnacio">omg-ayuda a un peludo</h2>
+        </a>
+    <h1>Joadiño!</h1>
     <br>
     <br>
-    <Center><img src="GATO1.jpg" alt="Cliqueame"></Center>
-    <center><h3></center>
-    <center><h3>Descripcion del Joadiño</h3></center>
-    <center><texto>sexo: masculino</texto></center>
+    <img src="GATO1.jpg" alt="Cliqueame">
+    <h3>Descripcion del Joadiño</h3>
+    <texto>sexo: masculino</texto>
     <br>
-    <center><texto>edad: 3 meses</texto></center>
+    <texto>edad: 3 meses</texto>
     <br>
-    <center><texto>esterilizado: si</texto></center>
+    <texto>esterilizado: si</texto>
     <br>
-    <center><texto>chip de rastreo: 6754</texto></center>
+    <texto>chip de rastreo: 6754</texto>
     <br>
     <br>
     
