--- a/maximiliano.html
+++ b/maximiliano.html
@@ -7,18 +7,23 @@
     <title>Document</title>
 </head>
 <body>
-    <center><h1>Maximiliano!</h1></center>
+    <header>
+        <a href="#" class="logo">
+            <img src="imagenes/logo.png" alt="logo del gym">
+            <h2 class="nombre del gimnacio">omg-ayuda a un peludo</h2>
+        </a>
+    <h1>Maximiliano!</h1>
     <br>
     <br>
-    <Center><img src="img/GATO3.jpg" alt="Cliqueame"></Center>
-    <center><h3>Descripcion del Joadiño</h3></center>
-    <center><texto>sexo: masculino</texto></center>
+    <img src="img/GATO3.jpg" alt="Cliqueame">
+    <h3>Descripcion del Joadiño</h3>
+    <texto>sexo: masculino</texto>
     <br>
-    <center><texto>edad: 2 meses</texto></center>
+    <texto>edad: 2 meses</texto>
     <br>
-    <center><texto>esterilizado: no </texto></center>
+    <texto>esterilizado: no </texto>
     <br>
-    <center><texto>chip de rastreo: 1984</texto></center>
+    <texto>chip de rastreo: 1984</texto>
     <br>
     <br>
 </body>
