--- a/pantallaprincipal.html
+++ b/pantallaprincipal.html
@@ -9,40 +9,30 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+    <ul>
+        <li><a href="gatos.html">gatos</a></li>
+        <li><a href="perros.html">perros</a></li>
+    </ul>
     <header>
         <a href="#" class="logo">
-            <img src="imagenes/logo.png" alt="logo del gym">
-            <h2 class="nombre del gimnacio">omg-ayuda a un peludo</h2>
+            <img src="img/logo.jfif" alt="logo del gym">
+            <h2 class="nombre ">omg-ayuda a un peludo</h2>
         </a>
-    <center><h1><titulo>Ong- Ayuda aun peludo</titulo></h1></center>
-    <br>
-    <br>
-    <center><parrafo>Una ONG “Ayuda a un peludo” que trabaja con la adopción de animales que viven en la calle,<br>
+    <parrafo>Una ONG “Ayuda a un peludo” que trabaja con la adopción de animales que viven en la calle,<br>
         necesita con urgencia que ustedes creen un sitio web que permita mostrar las fichas de cada uno
         de los animalitos que están disponibles para su adopción. </parrafo></center>
         <br>
         <br>
-    <center><titulo>Encargados:</titulo></center>
+    <titulo>Encargados:</titulo>
     <br>
-    <center><parrafo2>Luis Huircan - Cargo: Veterinario.
-    <br> Maximiiano Urrejola - Cargo: Rescatista.</parrafo2></center> 
-    <br>
-    <br>
-    <center><title2>Nuestra seccion de ayuda:</title2></center>
-    <br>
-    <center><a><img src="img/perro1.jfif"alt="perro"></a></center>
-    <center><a href="perros.html"><br><br>perros</a></center>
+    <parrafo2>Luis Huircan - Cargo: Veterinario.
+    <br> Maximiiano Urrejola - Cargo: Rescatista.</parrafo2>
     <br>
     <br>
-    <center><a><img src="img/GATO1.jpg"alt="perro"></a> <a href="gatos.html"></a></center> 
-    <center><a href="gatos.html"><br><br>gatos</a></center>
+    <title2>Nuestra seccion de ayuda:</title2>
     <br>
-    <br>
-    <nav>
-        <a href="" class="nav-link">inicio</a>
-        <a href="" class="nav-link">inscripciones</a>
-        <a href="" class="nav-link">contactos</a>
-    </nav>
+    <a><img src="img/perro1.jfif"alt="perro"></a>
+    <a><img src="img/GATO1.jpg"alt="perro"></a> <a href="gatos.html"></a> 
     </header>
    
    
