--- a/gatos.html
+++ b/gatos.html
@@ -21,15 +21,15 @@
         en espera de su adopción definitiva. </h5></parrafo></Center>   
     <br>
     <br>
-    <Center><img src="GATO1.jpg" alt="Cliqueame"></Center>
+    <Center><img src="img/GATO1.jpg" alt="Cliqueame"></Center>
     <Center><a href="Joadiño.html"> Joadiño</a></Center>
     <br>
     <br>
-    <Center><img src="GATO2.jpg" alt="Cliqueame"/></Center>
+    <Center><img src="img/GATO2.jpg" alt="Cliqueame"/></Center>
     <Center><a href="Jonyboy.html"> Jony boy</a></Center>
     <br>
     <br>
-    <Center><img src="GATO3.jpg" alt="Cliqueame"></Center>
+    <Center><img src="img/GATO3.jpg" alt="Cliqueame"></Center>
     <Center><a href="maximiliano.html"> Maximiliano</a></Center>
     <br>
     <br>
