--- a/juan.html
+++ b/juan.html
@@ -10,7 +10,7 @@
     <center><h1>Juan</h1></center>
     <br>
     <br>
-    <Center><img src="perro2.jpg" alt="Cliqueame"></Center>
+    <Center><img src="img/perro2.jpg" alt="Cliqueame"></Center>
     <center><h3>Descripcion del Juan</h3></center>
     <center><texto>sexo: masculino</texto></center>
     <br>
