--- a/pedro.html
+++ b/pedro.html
@@ -10,7 +10,7 @@
     <center><h1>Pedro</h1></center>
     <br>
     <br>
-    <Center><img src="perro1.jfif" alt="Cliqueame"></Center>
+    <Center><img src="img/perro1.jfif" alt="Cliqueame"></Center>
     <center><h3>Descripcion del Pedro</h3></center>
     <br>
     <br>
