--- a/pantallaprincipal.html
+++ b/pantallaprincipal.html
@@ -9,14 +9,16 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+    <div>
     <ul>
         <li><a href="gatos.html">gatos</a></li>
         <li><a href="perros.html">perros</a></li>
     </ul>
+    </div>
     <header>
         <a href="#" class="logo">
             <img src="img/logo.jfif" alt="logo del gym">
-            <h2 class="nombre ">omg-ayuda a un peludo</h2>
+            <h2 class="nombre ">ong-ayuda a un peludo</h2>
         </a>
     <parrafo>Una ONG “Ayuda a un peludo” que trabaja con la adopción de animales que viven en la calle,<br>
         necesita con urgencia que ustedes creen un sitio web que permita mostrar las fichas de cada uno
