--- a/perros.html
+++ b/perros.html
@@ -21,15 +21,15 @@
         en espera de su adopción definitiva. </h5></Center>   
     <br>
     <br>
-    <Center><img src="perro1.jfif" alt="Cliqueame"></Center>
+    <Center><img src="img/perro1.jfif" alt="Cliqueame"></Center>
     <Center><a href="pedro.html"> Pedro </a></Center>
     <br>
     <br>
-    <Center><img src="perro2.jpg" alt="Cliqueame"/></Center>
+    <Center><img src="img/perro2.jpg" alt="Cliqueame"/></Center>
     <Center><a href="juan.html"> Juan </a></Center>
     <br>
     <br>
-    <Center><img src="perro3.jfif" alt="Cliqueame"></Center>
+    <Center><img src="img/perro3.jfif" alt="Cliqueame"></Center>
     <Center><a href="diego.html"> Diego </a></Center>
     <br>
     <br>
