--- a/Joadiño.html
+++ b/Joadiño.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles/style.css">
+
 </head>
 <body>
     <header>
@@ -15,7 +17,7 @@
     <h1>Joadiño!</h1>
     <br>
     <br>
-    <img src="GATO1.jpg" alt="Cliqueame">
+    <img class="tamannio_imagenes" src="img/GATO1.jpg" alt="Cliqueame">
     <h3>Descripcion del Joadiño</h3>
     <texto>sexo: masculino</texto>
     <br>
