--- a/Jonyboy.html
+++ b/Jonyboy.html
@@ -15,7 +15,7 @@
     <h1>Jonyboy!</h1>
     <br>
     <br>
-    <img src="img/GATO2.jpg" alt="Cliqueame"/>
+    <img class="tamannio_imagenes" src="img/GATO2.jpg" alt="Cliqueame"/>
     <h3>Descripcion del Jonyboy</h3>
     <texto>sexo: masculino</texto>
     <br>
