--- a/maximiliano.html
+++ b/maximiliano.html
@@ -15,7 +15,7 @@
     <h1>Maximiliano!</h1>
     <br>
     <br>
-    <img src="img/GATO3.jpg" alt="Cliqueame">
+    <img class="tamannio_imagenes" src="img/GATO3.jpg" alt="Cliqueame">
     <h3>Descripcion del Joadiño</h3>
     <texto>sexo: masculino</texto>
     <br>
