--- a/Joadino.html
+++ b/Joadino.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <link type="text/css" rel="stylesheet" href="sryles/style.css">
 
 </head>
 <body>
@@ -14,11 +14,11 @@
             <img src="imagenes/logo.png" alt="logo del gym">
             <h2 class="nombre del gimnacio">omg-ayuda a un peludo</h2>
         </a>
-    <h1>Joadiño!</h1>
+    <h1>Joadino!</h1>
     <br>
     <br>
-    <img class="tamannio_imagenes" src="img/GATO1.jpg" alt="Cliqueame">
-    <h3>Descripcion del Joadiño</h3>
+    <img class="tamano" src="img/GATO1.jpg" alt="Cliqueame">
+    <h3>Descripcion del Joadino</h3>
     <texto>sexo: masculino</texto>
     <br>
     <texto>edad: 3 meses</texto>
