--- a/Jonyboy.html
+++ b/Jonyboy.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link type="text/css" rel="stylesheet" href="sryles/style.css">
 </head>
 <body>
     <header>
@@ -15,7 +16,7 @@
     <h1>Jonyboy!</h1>
     <br>
     <br>
-    <img class="tamannio_imagenes" src="img/GATO2.jpg" alt="Cliqueame"/>
+    <img class="tamano" src="img/GATO2.jpg" alt="Cliqueame"/>
     <h3>Descripcion del Jonyboy</h3>
     <texto>sexo: masculino</texto>
     <br>
