--- a/pantallaprincipal.html
+++ b/pantallaprincipal.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <link type="text/css" rel="stylesheet" href="sryles/style.css">
+    
 </head>
 <body>
     <div>
@@ -15,14 +16,15 @@
         <li><a href="perros.html">perros</a></li>
     </ul>
     </div>
-    <header>
+
         <a href="#" class="logo">
             <img src="img/logo.jfif" alt="logo del gym">
             <h2 class="nombre ">ong-ayuda a un peludo</h2>
         </a>
+
     <parrafo>Una ONG “Ayuda a un peludo” que trabaja con la adopción de animales que viven en la calle,<br>
         necesita con urgencia que ustedes creen un sitio web que permita mostrar las fichas de cada uno
-        de los animalitos que están disponibles para su adopción. </parrafo></center>
+        de los animalitos que están disponibles para su adopción. </parrafo>
         <br>
         <br>
     <titulo>Encargados:</titulo>
@@ -33,8 +35,8 @@
     <br>
     <title2>Nuestra seccion de ayuda:</title2>
     <br>
-    <a><img src="img/perro1.jfif"alt="perro"></a>
-    <a><img src="img/GATO1.jpg"alt="perro"></a> <a href="gatos.html"></a> 
+    <a><img class="tamano" src="img/perro1.jfif"alt="perro"></a>
+    <a><img class="tamano" src="img/GATO1.jpg"alt="perro"></a> <a href="gatos.html"></a> 
     </header>
    
    
