--- a/diego.html
+++ b/diego.html
@@ -5,20 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link type="text/css" rel="stylesheet" href="sryles/style.css">
+
 </head>
 <body>
-    <center><h1>Diego</h1></center>
+    
+    <a href="#" class="logo">
+        <img src="imagenes/logo.png" alt="logo del gym">
+        <h2 class="nombre del gimnacio">omg-ayuda a un peludo</h2>
+    </a>
+
+    <h1>Diego</h1>
     <br>
-    <br>
-    <Center><img src="img/perro3.jfif" alt="Cliqueame"></Center>
-    <center><h3>Descripcion del Diego</h3></center>
-    <center><texto>sexo: masculino</texto></center>
-    <br>
-    <center><texto>edad: 4 meses</texto></center>
-    <br>
-    <center><texto>esterilizado: no</texto></center>
-    <br>
-    <center><texto>chip de rastreo: 8768</texto></center>
+    <img src="img/perro3.jfif" alt="Cliqueame">
+    <h3>Descripcion del Diego</h3>
+    <texto>sexo: masculino</texto>
+    <texto>edad: 4 meses</texto>
+    <texto>esterilizado: no</texto>
+    <texto>chip de rastreo: 8768</texto>
     <br>
     <br>
 </body>
