--- a/gatos.html
+++ b/gatos.html
@@ -6,34 +6,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ayuda a un Peludo!</title>
+    <link type="text/css" rel="stylesheet" href="sryles/style.css">
+
 </head>
 <body>
+
+    <a href="#" class="logo">
+        <img src="imagenes/logo.png" alt="logo del gym">
+        <h2 class="nombre del gimnacio">omg-ayuda a un peludo</h2>
+    </a>
+
     <br>
-    <Center><h1>Gatos en adopcion!</h1></Center>
+    <h1>Gatos en adopcion!</h1>
     <br>
-    <Center><h1>Nuestro gatos que buscan familia!</h1></Center>
+    <h1>Nuestro gatos que buscan familia!</h1>
     <br>
-    <Center><parrafo><h5>Es una organización sin fines de lucro, dedicada al rescate, 
+    <parrafo><h5>Es una organización sin fines de lucro, dedicada al rescate, 
         rehabilitación y reubicación de gatos abandonados. Realiza, operativos 
         de esterilización y jornadas de adopción todas las semanas. Todos los gatos 
         que entrega están esterilizados desde los dos meses de edad. Mantiene dos albergues 
         de gatos y una red de hogares temporales, que acogen a los gatos rescatados 
-        en espera de su adopción definitiva. </h5></parrafo></Center>   
+        en espera de su adopción definitiva. </h5></parrafo>  
     <br>
     <br>
-    <Center><img src="img/GATO1.jpg" alt="Cliqueame"></Center>
-    <Center><a href="Joadiño.html"> Joadiño</a></Center>
+    <img class="tamano" src="img/GATO1.jpg" alt="Cliqueame">
+    <a href="Joadiño.html"> Joadiño</a>
     <br>
     <br>
-    <Center><img src="img/GATO2.jpg" alt="Cliqueame"/></Center>
-    <Center><a href="Jonyboy.html"> Jony boy</a></Center>
+    <img class="tamano" src="img/GATO2.jpg" alt="Cliqueame"/>
+    <a href="Jonyboy.html"> Jony boy</a>
     <br>
     <br>
-    <Center><img src="img/GATO3.jpg" alt="Cliqueame"></Center>
-    <Center><a href="maximiliano.html"> Maximiliano</a></Center>
+    <img class="tamano" src="img/GATO3.jpg" alt="Cliqueame">
+    <a href="maximiliano.html"> Maximiliano</a>
     <br>
     <br>
     
-
 </body>
 </html>
