--- a/pedro.html
+++ b/pedro.html
@@ -5,23 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link type="text/css" rel="stylesheet" href="sryles/style.css">
 </head>
 <body>
-    <center><h1>Pedro</h1></center>
+
+    <a href="#" class="logo">
+        <img src="imagenes/logo.png" alt="logo del gym">
+        <h2 class="nombre del gimnacio">omg-ayuda a un peludo</h2>
+    </a>
+
+    <h1>Pedro</h1>
     <br>
     <br>
-    <Center><img src="img/perro1.jfif" alt="Cliqueame"></Center>
-    <center><h3>Descripcion del Pedro</h3></center>
+    <img src="img/perro1.jfif" alt="Cliqueame">
+    <h3>Descripcion del Pedro</h3>
     <br>
     <br>
-    <center><texto>sexo: masculino</texto></center>
-    <br>
-    <center><texto>edad: 3 meses</texto></center>
-    <br>
-    <center><texto>esterilizado: no</texto></center>
-    <br>
-    <center><texto>chip de rastreo: 5432</texto></center>
+    <texto>sexo: masculino</texto>
+    <texto>edad: 3 meses</texto>
+    <texto>esterilizado: no</texto>
+    <texto>chip de rastreo: 5432</texto>
     <br>
     <br>
+    
 </body>
 </html>
