--- a/perros.html
+++ b/perros.html
@@ -6,31 +6,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link type="text/css" rel="stylesheet" href="sryles/style.css">
+
 </head>
 <body>
+    <a href="#" class="logo">
+        <img src="imagenes/logo.png" alt="logo del gym">
+        <h2 class="nombre del gimnacio">omg-ayuda a un peludo</h2>
+    </a>
+
     <br>
-    <Center><h1>Perros en adopcion!</h1></Center>
+    <h1>Perros en adopcion!</h1>
     <br>
-    <Center><h1>Nuestro perros que buscan familia!</h1></Center>
+    <h1>Nuestro perros que buscan familia!</h1>
     <br>
-    <Center><h5>Es una organización sin fines de lucro, dedicada al rescate, 
+    <h5>Es una organización sin fines de lucro, dedicada al rescate, 
         rehabilitación y reubicación de Perros abandonados. Realizamos, operativos 
         de esterilización y jornadas de adopción todas las semanas. Todos los perros 
         que entrega están esterilizados desde los dos meses de edad. Mantiene dos albergues 
         de gatos y una red de hogares temporales, que acogen a los gatos rescatados 
-        en espera de su adopción definitiva. </h5></Center>   
+        en espera de su adopción definitiva. </h5>   
     <br>
     <br>
-    <Center><img src="img/perro1.jfif" alt="Cliqueame"></Center>
-    <Center><a href="pedro.html"> Pedro </a></Center>
+    <img class="tamano" src="img/perro1.jfif" alt="Cliqueame">
+    <a href="pedro.html"> Pedro </a>
     <br>
     <br>
-    <Center><img src="img/perro2.jpg" alt="Cliqueame"/></Center>
-    <Center><a href="juan.html"> Juan </a></Center>
+    <img class="tamano" src="img/perro2.jpg" alt="Cliqueame"/>
+    <a href="juan.html"> Juan </a>
     <br>
     <br>
-    <Center><img src="img/perro3.jfif" alt="Cliqueame"></Center>
-    <Center><a href="diego.html"> Diego </a></Center>
+    <img class="tamano" src="img/perro3.jfif" alt="Cliqueame">
+    <a href="diego.html"> Diego </a>
     <br>
     <br>
     
