--- a/pedro.html
+++ b/pedro.html
@@ -9,22 +9,25 @@
 </head>
 <body>
 
-    <a href="#" class="logo">
-        <img src="imagenes/logo.png" alt="logo del gym">
-        <h2 class="nombre del gimnacio">omg-ayuda a un peludo</h2>
-    </a>
+    <div>
+        <ul>
+            <li><a href="gatos.html">gatos</a></li>
+            <li><a href="perros.html">perros</a></li>
+        </ul>
+        </div>
 
-    <h1>Pedro</h1>
+        <a href="#" class="BANNER">
+            <img class="tamano_banner" src="img/BANNER.jpg" alt="BANNER">
+        </a>
+
+
+    <h1 style="text-align: center;">Pedro</h1>
     <br>
+    <center><img src="img/perro1.jfif" alt="Cliqueame"></center>
+    <h1 style="text-align: center;" >Descripcion del Pedro</h1>
     <br>
-    <img src="img/perro1.jfif" alt="Cliqueame">
-    <h3>Descripcion del Pedro</h3>
-    <br>
-    <br>
-    <texto>sexo: masculino</texto>
-    <texto>edad: 3 meses</texto>
-    <texto>esterilizado: no</texto>
-    <texto>chip de rastreo: 5432</texto>
+    <h3 style="text-align: center;" >Sexo: masculino <br>
+        Edad: 3 meses <br> Esterilizado: no <br> Chip de rastreo: 5432</h3>
     <br>
     <br>
     
