--- a/Joadino.html
+++ b/Joadino.html
@@ -8,27 +8,30 @@
     <link type="text/css" rel="stylesheet" href="sryles/style.css">
 </head>
 <body>
+
+    <div>
+        <ul>
+            <li><a href="gatos.html">gatos</a></li>
+            <li><a href="perros.html">perros</a></li>
+        </ul>
+        </div>
     
-        <a href="#" class="logo">
-            <img src="imagenes/logo.png" alt="logo del gym">
-            <h2 class="nombre del gimnacio">omg-ayuda a un peludo</h2>
+        <a href="#" class="BANNER">
+            <img class="tamano_banner" src="img/BANNER.jpg" alt="BANNER">
         </a>
 
     <h1>Joadino!</h1>
     <br>
     <br>
-    <img class="tamano" src="img/GATO1.jpg" alt="Cliqueame">
+    <center><img class="tamano" src="img/GATO1.jpg" alt="Cliqueame"></center>
     <h3>Descripcion del Joadino</h3>
-    <texto>sexo: masculino</texto>
     <br>
-    <texto>edad: 3 meses</texto>
-    <br>
-    <texto>esterilizado: si</texto>
-    <br>
-    <texto>chip de rastreo: 6754</texto>
+    <h3 style="text-align: center;" >Sexo: masculino <br>
+        Edad: 3 meses <br> Esterilizado: si <br> Chip de rastreo: 6754</h3>
     <br>
     <br>
     
 
 </body>
 </html>
+
