--- a/diego.html
+++ b/diego.html
@@ -9,20 +9,24 @@
 
 </head>
 <body>
-    
-    <a href="#" class="logo">
-        <img src="imagenes/logo.png" alt="logo del gym">
-        <h2 class="nombre del gimnacio">omg-ayuda a un peludo</h2>
-    </a>
+    <div>
+        <ul>
+            <li><a href="gatos.html">gatos</a></li>
+            <li><a href="perros.html">perros</a></li>
+        </ul>
+        </div>
 
-    <h1>Diego</h1>
+        <a href="#" class="BANNER">
+            <img class="tamano_banner"  src="img/BANNER.jpg" alt="BANNER">
+        </a>
+
+    <h1 style="text-align: center;">Diego</h1>
     <br>
-    <img src="img/perro3.jfif" alt="Cliqueame">
-    <h3>Descripcion del Diego</h3>
-    <texto>sexo: masculino</texto>
-    <texto>edad: 4 meses</texto>
-    <texto>esterilizado: no</texto>
-    <texto>chip de rastreo: 8768</texto>
+    <center><img src="img/perro3.jfif" alt="Cliqueame"></center>
+    <h1 style="text-align: center;">Descripcion de Diego</h1>
+    <br>
+    <h3 style="text-align: center;">Sexo: masculino <br>
+        Edad: 4 meses <br> Esterilizado: no <br> Chip de rastreo: 8768</h3>
     <br>
     <br>
 </body>
