--- a/gatos.html
+++ b/gatos.html
@@ -10,11 +10,16 @@
 
 </head>
 <body>
+    <div>
+        <ul>
+            <li><a href="gatos.html">gatos</a></li>
+            <li><a href="perros.html">perros</a></li>
+        </ul>
+        </div>
 
-    <a href="#" class="logo">
-        <img src="imagenes/logo.png" alt="logo del gym">
-        <h2 class="nombre del gimnacio">omg-ayuda a un peludo</h2>
-    </a>
+        <a href="#" class="BANNER">
+            <img class="tamano_banner" src="img/BANNER.jpg" alt="BANNER">
+        </a>
 
     <br>
     <h1>Gatos en adopcion!</h1>
@@ -30,7 +35,7 @@
     <br>
     <br>
     <img class="tamano" src="img/GATO1.jpg" alt="Cliqueame">
-    <a href="Joadiño.html"> Joadiño</a>
+    <a href="Joadino.html"> Joadiño</a>
     <br>
     <br>
     <img class="tamano" src="img/GATO2.jpg" alt="Cliqueame"/>
