--- a/juan.html
+++ b/juan.html
@@ -9,23 +9,27 @@
 
 </head>
 <body>
-    
-    <a href="#" class="logo">
-        <img src="imagenes/logo.png" alt="logo del gym">
-        <h2 class="nombre del gimnacio">omg-ayuda a un peludo</h2>
-    </a>
 
-    <h1>Juan</h1>
+    <div>
+        <ul>
+            <li><a href="gatos.html">gatos</a></li>
+            <li><a href="perros.html">perros</a></li>
+        </ul>
+        </div>
+    
+        <a href="#" class="BANNER">
+            <img class="tamano_banner" src="img/BANNER.jpg" alt="BANNER">
+        </a>
+
+    <h1 style="text-align: center;">Juan</h1>
     <br>
+    <center><img src="img/perro2.jpg" alt="Cliqueame"></center>
+    <h1 style="text-align: center;" >Descripcion del Juan</h1>
     <br>
-    <img src="img/perro2.jpg" alt="Cliqueame">
-    <h3>Descripcion del Juan</h3>
-    <br>
-    <texto>sexo: masculino</texto>
-    <texto>edad: 2 meses</texto>
-    <texto>esterilizado: no</texto>
-    <texto>chip de rastreo: 6754</texto>
+    <h3 style="text-align: center;" >Sexo: masculino <br>
+        Edad: 2 meses <br> Esterilizado: no <br> Chip de rastreo: 6754</h3>
     <br>
     <br>
 </body>
 </html>
+
