--- a/maximiliano.html
+++ b/maximiliano.html
@@ -9,24 +9,27 @@
 </head>
 <body>
 
-        <a href="#" class="logo">
-            <img src="imagenes/logo.png" alt="logo del gym">
-            <h2 class="nombre del gimnacio">omg-ayuda a un peludo</h2>
+    <div>
+        <ul>
+            <li><a href="gatos.html">gatos</a></li>
+            <li><a href="perros.html">perros</a></li>
+        </ul>
+        </div>
+
+        <a href="#" class="BANNER">
+            <img class="tamano_banner" src="img/BANNER.jpg" alt="BANNER">
         </a>
         
     <h1>Maximiliano!</h1>
     <br>
     <br>
-    <img class="tamano" src="img/GATO3.jpg" alt="Cliqueame">
-    <h3>Descripcion del Joadiño</h3>
-    <texto>sexo: masculino</texto>
+    <center><img class="tamano" src="img/GATO3.jpg" alt="Cliqueame"></center>
+    <h3>Descripcion del Maximiiano</h3>
     <br>
-    <texto>edad: 2 meses</texto>
-    <br>
-    <texto>esterilizado: no </texto>
-    <br>
-    <texto>chip de rastreo: 1984</texto>
+    <h3 style="text-align: center;" >Sexo: masculino <br>
+        Edad: 2 meses <br> Esterilizado: no <br> Chip de rastreo: 1984</h3>
     <br>
     <br>
 </body>
 </html>
+
