--- a/pantallaprincipal.html
+++ b/pantallaprincipal.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">    
 <head>
-    <title><h1>ONG - Ayuda a un peludo</h1></title>
+    <title>ONG - Ayuda a un peludo</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,27 +17,27 @@
     </ul>
     </div>
 
-        <a href="#" class="logo">
-            <img src="img/logo.jfif" alt="logo del gym">
-            <h2 class="nombre ">ong-ayuda a un peludo</h2>
-        </a>
+    <a href="#" class="BANNER">
+        <img class="tamano_banner" src="img/BANNER.jpg" alt="BANNER">
+    </a>
 
-    <parrafo>Una ONG “Ayuda a un peludo” que trabaja con la adopción de animales que viven en la calle,<br>
+    <h1 style="text-align: center;" class="Ayuda a un peludo">Ayuda a un peludo</h1>
+
+    <parrafo><h3 style="text-align: center;">Una ONG “Ayuda a un peludo” que trabaja con la adopción de animales que viven en la calle,<br>
         necesita con urgencia que ustedes creen un sitio web que permita mostrar las fichas de cada uno
-        de los animalitos que están disponibles para su adopción. </parrafo>
+        de los animalitos que están disponibles para su adopción. </h3></parrafo>
         <br>
         <br>
-    <titulo>Encargados:</titulo>
+    <titulo><h3 style="text-align: center;">Encargados:</h3></titulo>
+    <parrafo2><h3 style="text-align: center;">Luis Huircan - Cargo: Veterinario <br>
+        Maximiliano Urrejola - Cargo: Rescatista.</h3></parrafo2>
     <br>
-    <parrafo2>Luis Huircan - Cargo: Veterinario.
-    <br> Maximiiano Urrejola - Cargo: Rescatista.</parrafo2>
     <br>
-    <br>
-    <title2>Nuestra seccion de ayuda:</title2>
+    <title2><h1 style="text-align: center;">Nuestra seccion de ayuda:</h1></title2>
     <br>
     <a><img class="tamano" src="img/perro1.jfif"alt="perro"></a>
     <a><img class="tamano" src="img/GATO1.jpg"alt="perro"></a> <a href="gatos.html"></a> 
-    </header>
+
    
    
 </body>
