--- a/perros.html
+++ b/perros.html
@@ -10,9 +10,16 @@
 
 </head>
 <body>
-    <a href="#" class="logo">
-        <img src="imagenes/logo.png" alt="logo del gym">
-        <h2 class="nombre del gimnacio">omg-ayuda a un peludo</h2>
+
+    <div>
+        <ul>
+            <li><a href="gatos.html">gatos</a></li>
+            <li><a href="perros.html">perros</a></li>
+        </ul>
+        </div>
+
+    <a href="#" class="BANNER">
+        <img class="tamano_banner" src="img/BANNER.jpg" alt="BANNER">
     </a>
 
     <br>
