--- a/Joadino.html
+++ b/Joadino.html
@@ -20,11 +20,11 @@
             <img class="tamano_banner" src="img/BANNER.jpg" alt="BANNER">
         </a>
 
-    <h1>Joadino!</h1>
+    <h1 style="text-align: center;" >Joadiño!</h1>
     <br>
     <br>
     <center><img class="tamano" src="img/GATO1.jpg" alt="Cliqueame"></center>
-    <h3>Descripcion del Joadino</h3>
+    <h1 style="text-align: center;" >Descripcion del Joadiño</h1>
     <br>
     <h3 style="text-align: center;" >Sexo: masculino <br>
         Edad: 3 meses <br> Esterilizado: si <br> Chip de rastreo: 6754</h3>
