--- a/Jonyboy.html
+++ b/Jonyboy.html
@@ -20,11 +20,11 @@
             <img class="tamano_banner" src="img/BANNER.jpg" alt="BANNER">
         </a>
 
-    <h1>Jonyboy!</h1>
+    <h1 style="text-align: center;" >Jonyboy!</h1>
     <br>
     <br>
     <center><img class="tamano" src="img/GATO2.jpg" alt="Cliqueame"/></center>
-    <h3>Descripcion del Jonyboy</h3>
+    <h1 style="text-align: center;" >Descripcion del Jonyboy</h1>
     <br>
     <h3 style="text-align: center;">Sexo: masculino <br>
         Edad: 2 meses <br> Esterilizado: no <br> Chip de rastreo: 1452</h3>
