--- a/gatos.html
+++ b/gatos.html
@@ -22,28 +22,28 @@
         </a>
 
     <br>
-    <h1>Gatos en adopcion!</h1>
+    <h1 style="text-align: center;">Gatos en adopcion!</h1>
     <br>
-    <h1>Nuestro gatos que buscan familia!</h1>
+    <h1 style="text-align: center;">Nuestros gatos que buscan familia!</h1>
     <br>
-    <parrafo><h5>Es una organización sin fines de lucro, dedicada al rescate, 
+    <h3 style="text-align: center;">Es una organización sin fines de lucro, dedicada al rescate, 
         rehabilitación y reubicación de gatos abandonados. Realiza, operativos 
         de esterilización y jornadas de adopción todas las semanas. Todos los gatos 
         que entrega están esterilizados desde los dos meses de edad. Mantiene dos albergues 
         de gatos y una red de hogares temporales, que acogen a los gatos rescatados 
-        en espera de su adopción definitiva. </h5></parrafo>  
+        en espera de su adopción definitiva. </h3>  
     <br>
     <br>
-    <img class="tamano" src="img/GATO1.jpg" alt="Cliqueame">
-    <a href="Joadino.html"> Joadiño</a>
+    <center><img class="tamano" src="img/GATO1.jpg" alt="Cliqueame"></center>
+    <a href="Joadino.html"> <h3 style="text-align: center;">Joadiño</h3></a>
     <br>
     <br>
-    <img class="tamano" src="img/GATO2.jpg" alt="Cliqueame"/>
-    <a href="Jonyboy.html"> Jony boy</a>
+    <center><img class="tamano" src="img/GATO2.jpg" alt="Cliqueame"/></center>
+    <a href="Jonyboy.html"> <h3 style="text-align: center;">Jony boy</h3></a>
     <br>
     <br>
-    <img class="tamano" src="img/GATO3.jpg" alt="Cliqueame">
-    <a href="maximiliano.html"> Maximiliano</a>
+    <center><img class="tamano" src="img/GATO3.jpg" alt="Cliqueame"></center>
+    <a href="maximiliano.html"> <h3 style="text-align: center;"> Maximiliano</h3></a>
     <br>
     <br>
     
