--- a/pantallaprincipal.html
+++ b/pantallaprincipal.html
@@ -29,14 +29,13 @@
         <br>
         <br>
     <titulo><h3 style="text-align: center;">Encargados:</h3></titulo>
-    <parrafo2><h3 style="text-align: center;">Luis Huircan - Cargo: Veterinario <br>
-        Maximiliano Urrejola - Cargo: Rescatista.</h3></parrafo2>
-    <br>
+    <h3 style="text-align: center;">Luis Huircan - Cargo: Veterinario <br>
+        Maximiliano Urrejola - Cargo: Rescatista.</h3>
     <br>
     <title2><h1 style="text-align: center;">Nuestra seccion de ayuda:</h1></title2>
     <br>
-    <a><img class="tamano" src="img/perro1.jfif"alt="perro"></a>
-    <a><img class="tamano" src="img/GATO1.jpg"alt="perro"></a> <a href="gatos.html"></a> 
+    <a><center><img class="tamano" src="img/perro1.jfif" alt="Perros"></a></center>
+    <a><center><img class="tamano" src="img/GATO1.jpg" alt="gatos"></a> <a href="gatos.html"></a> </center>
 
    
    
