--- a/perros.html
+++ b/perros.html
@@ -23,28 +23,26 @@
     </a>
 
     <br>
-    <h1>Perros en adopcion!</h1>
+    <h1 style="text-align: center;">Perros en adopcion!</h1>
     <br>
-    <h1>Nuestro perros que buscan familia!</h1>
+    <h1 style="text-align: center;">Nuestro perros que buscan familia!</h1>
     <br>
-    <h5>Es una organización sin fines de lucro, dedicada al rescate, 
+    <h3 style="text-align: center;">Es una organización sin fines de lucro, dedicada al rescate, 
         rehabilitación y reubicación de Perros abandonados. Realizamos, operativos 
         de esterilización y jornadas de adopción todas las semanas. Todos los perros 
         que entrega están esterilizados desde los dos meses de edad. Mantiene dos albergues 
         de gatos y una red de hogares temporales, que acogen a los gatos rescatados 
-        en espera de su adopción definitiva. </h5>   
+        en espera de su adopción definitiva. </h3>   
     <br>
     <br>
-    <img class="tamano" src="img/perro1.jfif" alt="Cliqueame">
-    <a href="pedro.html"> Pedro </a>
+    <center><img class="tamano" src="img/perro1.jfif" alt="Cliqueame"></center>
+    <a href="pedro.html"> <h3 style="text-align: center;"> Pedro</h3> </a>
     <br>
+    <center><img class="tamano" src="img/perro2.jpg" alt="Cliqueame"/></center>
+    <a href="juan.html"> <h3 style="text-align: center;"> Juan</h3> </a>
     <br>
-    <img class="tamano" src="img/perro2.jpg" alt="Cliqueame"/>
-    <a href="juan.html"> Juan </a>
-    <br>
-    <br>
-    <img class="tamano" src="img/perro3.jfif" alt="Cliqueame">
-    <a href="diego.html"> Diego </a>
+    <center><img class="tamano" src="img/perro3.jfif" alt="Cliqueame"></center>
+    <a href="diego.html"> <h3 style="text-align: center;"> Diego</h3> </a>
     <br>
     <br>
     
