--- a/maximiliano.html
+++ b/maximiliano.html
@@ -20,11 +20,11 @@
             <img class="tamano_banner" src="img/BANNER.jpg" alt="BANNER">
         </a>
         
-    <h1>Maximiliano!</h1>
+    <h1 style="text-align: center;" >Maximiliano!</h1>
     <br>
     <br>
     <center><img class="tamano" src="img/GATO3.jpg" alt="Cliqueame"></center>
-    <h3>Descripcion del Maximiiano</h3>
+    <h1 style="text-align: center;" >Descripcion del Maximiliano</h1>
     <br>
     <h3 style="text-align: center;" >Sexo: masculino <br>
         Edad: 2 meses <br> Esterilizado: no <br> Chip de rastreo: 1984</h3>
