--- a/gatos.html
+++ b/gatos.html
@@ -6,46 +6,68 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ayuda a un Peludo!</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" 
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link type="text/css" rel="stylesheet" href="sryles/style.css">
 
 </head>
+
+
 <body>
-    <div>
-        <ul>
-            <li><a href="gatos.html">gatos</a></li>
-            <li><a href="perros.html">perros</a></li>
-        </ul>
+    <div class="container">
+        <div style="text-align: center;">
+            <ul>
+                <li><a href="pantallaprincipal.html">Inicio</a></li>
+                <li><a href="gatos.html">Gatos</a></li>
+                <li><a href="perros.html">Perros</a></li>
+            </ul>
+            
+            <a href="#" class="BANNER">
+                <img class="tamano_banner" src="img/BANNER.jpg" alt="BANNER">
+            </a>
+
+            <br>
+            <h1 style="text-align: center;">Gatos en adopcion!</h1>
+            <br>
+            <h1 style="text-align: center;">Nuestros gatos que buscan familia!</h1>
+            <br>
+            <h3 style="text-align: center;">Es una organización sin fines de lucro, dedicada al rescate, 
+                rehabilitación y reubicación de gatos abandonados. Realiza, operativos 
+                de esterilización y jornadas de adopción todas las semanas. Todos los gatos 
+                que entrega están esterilizados desde los dos meses de edad. Mantiene dos albergues 
+                de gatos y una red de hogares temporales, que acogen a los gatos rescatados 
+                en espera de su adopción definitiva. </h3>  
+            <br>
+            <br>
+            <img class="tamano" src="img/GATO1.jpg" alt="Cliqueame">
+            <a href="Joadino.html"> 
+                <h3 style="text-align: center;">Joadiño</h3>
+            </a>
+            <br><br>
+            <img class="tamano" src="img/GATO2.jpg" alt="Cliqueame"/>
+                <a href="Jonyboy.html"> 
+                    <h3 style="text-align: center;">Jony boy</h3>
+                </a>
+            <br><br>
+            <img class="tamano" src="img/GATO3.jpg" alt="Cliqueame">
+                <a href="maximiliano.html"> 
+                    <h3 style="text-align: center;"> Maximiliano</h3>
+                </a>
+            <br><br>
         </div>
-
-        <a href="#" class="BANNER">
-            <img class="tamano_banner" src="img/BANNER.jpg" alt="BANNER">
-        </a>
-
-    <br>
-    <h1 style="text-align: center;">Gatos en adopcion!</h1>
-    <br>
-    <h1 style="text-align: center;">Nuestros gatos que buscan familia!</h1>
-    <br>
-    <h3 style="text-align: center;">Es una organización sin fines de lucro, dedicada al rescate, 
-        rehabilitación y reubicación de gatos abandonados. Realiza, operativos 
-        de esterilización y jornadas de adopción todas las semanas. Todos los gatos 
-        que entrega están esterilizados desde los dos meses de edad. Mantiene dos albergues 
-        de gatos y una red de hogares temporales, que acogen a los gatos rescatados 
-        en espera de su adopción definitiva. </h3>  
-    <br>
-    <br>
-    <center><img class="tamano" src="img/GATO1.jpg" alt="Cliqueame"></center>
-    <a href="Joadino.html"> <h3 style="text-align: center;">Joadiño</h3></a>
-    <br>
-    <br>
-    <center><img class="tamano" src="img/GATO2.jpg" alt="Cliqueame"/></center>
-    <a href="Jonyboy.html"> <h3 style="text-align: center;">Jony boy</h3></a>
-    <br>
-    <br>
-    <center><img class="tamano" src="img/GATO3.jpg" alt="Cliqueame"></center>
-    <a href="maximiliano.html"> <h3 style="text-align: center;"> Maximiliano</h3></a>
-    <br>
-    <br>
+    </div>
     
+
+
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" 
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" 
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" 
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" 
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" 
+        crossorigin="anonymous"></script>
 </body>
 </html>
