--- a/pedro.html
+++ b/pedro.html
@@ -4,32 +4,48 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>pedro</title>
+    <!--Link bootstrap css-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" 
+    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" 
+    crossorigin="anonymous">
+    <!----->
     <link type="text/css" rel="stylesheet" href="sryles/style.css">
 </head>
 <body>
-
-    <div>
+    <div class="container-fluid">
         <ul>
+            <li><a href="pantallaprincipal.html">Inicio</a></li>
             <li><a href="gatos.html">gatos</a></li>
             <li><a href="perros.html">perros</a></li>
         </ul>
+        <div class="row">
+            <div class="col-12">
+                <img class="baner" src="img/BANNER.jpg">
+            </div>
         </div>
-
-        <a href="#" class="BANNER">
-            <img class="tamano_banner" src="img/BANNER.jpg" alt="BANNER">
-        </a>
-
-
-    <h1 style="text-align: center;">Pedro</h1>
-    <br>
-    <center><img src="img/perro1.jfif" alt="Cliqueame"></center>
-    <h1 style="text-align: center;" >Descripcion del Pedro</h1>
-    <br>
-    <h3 style="text-align: center;" >Sexo: masculino <br>
-        Edad: 3 meses <br> Esterilizado: no <br> Chip de rastreo: 5432</h3>
-    <br>
-    <br>
-    
+    </div>
+    <div class="row">
+        <div class="col-12" style="text-align: center;">
+            <h1>Perros en adopción</h1>
+            <img style="width: 200px; height:200px" src="img/perro1.jfif">
+            <br>
+            <h2>Pedro</h2>
+            <br>
+            <p>Sexo: masculino
+            Edad: 3 meses <br> Esterilizado: no <br> Chip de rastreo: 5432</p>
+        </div>
+    </div>
+    <!--Links bootstrap JS-->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" 
+    crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" 
+    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" 
+    crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" 
+    integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" 
+    crossorigin="anonymous"></script>
+    <!---->
 </body>
 </html>
