--- a/perros.html
+++ b/perros.html
@@ -1,51 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>perros</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Perros</title>
+    <!--Link bootstrap css-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" 
+    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" 
+    crossorigin="anonymous">
+    <!---->
     <link type="text/css" rel="stylesheet" href="sryles/style.css">
-
 </head>
 <body>
-
-    <div>
-        <ul>
-            <li><a href="gatos.html">gatos</a></li>
-            <li><a href="perros.html">perros</a></li>
-        </ul>
+  <div class="container-fluid">
+    <ul>
+        <li><a href="pantallaprincipal.html">Inicio</a></li>
+        <li><a href="gatos.html">gatos</a></li>
+        <li><a href="perros.html">perros</a></li>
+    </ul>
+    <div class="row">
+        <div class="col-12">
+            <img class="baner" src="img/BANNER.jpg">
         </div>
+    </div>
+    <div class="row">
+        <div class="col-12" style="text-align: center;">
+            <p> Ayuda a un Peludo es una organización sin fines de lucro, dedicada al rescate, 
+                rehabilitación y reubicación de Perros abandonados. Realizamos, operativos 
+                de esterilización y jornadas de adopción todas las semanas. Todos los perros 
+                que entrega están esterilizados desde los dos meses de edad. Mantiene dos albergues 
+                de gatos y una red de hogares temporales, que acogen a los gatos rescatados 
+                en espera de su adopción definitiva. </p> 
+            <h1>Perros en adopción</h1>
+            <img style="width: 200px;height: 200px;" src="img/perro1.jfif">
+            <br>
+            <a href="pedro.html" style="color:rgb(0,0,0)">Pedro</a>
+            <br>
+            <br>
+            <img style="width:200px;height:200px;" src="img/perro2.jpg">
+            <br>
+            <a href="juan.html" style="color:rgb(0,0,0)">Juan</a>
+            <br>
+            <br>
+            <img style="width:200px;height:200px" src="img/perro3.jfif">
+            <br>
+            <a href="diego.html" style="color:rgb(0,0,0)">Diego</a>
 
-    <a href="#" class="BANNER">
-        <img class="tamano_banner" src="img/BANNER.jpg" alt="BANNER">
-    </a>
-
-    <br>
-    <h1 style="text-align: center;">Perros en adopcion!</h1>
-    <br>
-    <h1 style="text-align: center;">Nuestro perros que buscan familia!</h1>
-    <br>
-    <h3 style="text-align: center;">Es una organización sin fines de lucro, dedicada al rescate, 
-        rehabilitación y reubicación de Perros abandonados. Realizamos, operativos 
-        de esterilización y jornadas de adopción todas las semanas. Todos los perros 
-        que entrega están esterilizados desde los dos meses de edad. Mantiene dos albergues 
-        de gatos y una red de hogares temporales, que acogen a los gatos rescatados 
-        en espera de su adopción definitiva. </h3>   
-    <br>
-    <br>
-    <center><img class="tamano" src="img/perro1.jfif" alt="Cliqueame"></center>
-    <a href="pedro.html"> <h3 style="text-align: center;"> Pedro</h3> </a>
-    <br>
-    <center><img class="tamano" src="img/perro2.jpg" alt="Cliqueame"/></center>
-    <a href="juan.html"> <h3 style="text-align: center;"> Juan</h3> </a>
-    <br>
-    <center><img class="tamano" src="img/perro3.jfif" alt="Cliqueame"></center>
-    <a href="diego.html"> <h3 style="text-align: center;"> Diego</h3> </a>
-    <br>
-    <br>
-    
-
+        </div>
+    </div>  
+  </div>   
+  <!--Links bootstrap JS-->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 
+  integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" 
+  crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" 
+  integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" 
+  crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" 
+  integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" 
+  crossorigin="anonymous"></script>
+  <!---->
 </body>
 </html>
