--- a/gatos.html
+++ b/gatos.html
@@ -23,7 +23,7 @@
             </ul>
             
             <a href="#" class="BANNER">
-                <img class="tamano_banner" src="img/BANNER.jpg" alt="BANNER">
+                <img class="tamano_banner" src="img/banner.jfif" alt="BANNER">
             </a>
 
             <br>
