--- a/pedro.html
+++ b/pedro.html
@@ -21,7 +21,7 @@
         </ul>
         <div class="row">
             <div class="col-12">
-                <img class="baner" src="img/BANNER.jpg">
+                <img class="tamano_banner" src="img/banner.jfif" alt="BANNER">
             </div>
         </div>
     </div>
