--- a/perros.html
+++ b/perros.html
@@ -14,39 +14,40 @@
 </head>
 <body>
   <div class="container-fluid">
-    <ul>
-        <li><a href="pantallaprincipal.html">Inicio</a></li>
-        <li><a href="gatos.html">gatos</a></li>
-        <li><a href="perros.html">perros</a></li>
-    </ul>
-    <div class="row">
-        <div class="col-12">
-            <img class="baner" src="img/BANNER.jpg">
+    <div style="text-align: center;">
+        <ul>
+            <li><a href="pantallaprincipal.html">Inicio</a></li>
+            <li><a href="gatos.html">gatos</a></li>
+            <li><a href="perros.html">perros</a></li>
+        </ul>
+        <div class="row">
+            <div class="col-12">
+                <img class="tamano_banner" src="img/banner.jfif" alt="BANNER">
+            </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-12" style="text-align: center;">
-            <p> Ayuda a un Peludo es una organización sin fines de lucro, dedicada al rescate, 
-                rehabilitación y reubicación de Perros abandonados. Realizamos, operativos 
-                de esterilización y jornadas de adopción todas las semanas. Todos los perros 
-                que entrega están esterilizados desde los dos meses de edad. Mantiene dos albergues 
-                de gatos y una red de hogares temporales, que acogen a los gatos rescatados 
-                en espera de su adopción definitiva. </p> 
-            <h1>Perros en adopción</h1>
-            <img style="width: 200px;height: 200px;" src="img/perro1.jfif">
-            <br>
-            <a href="pedro.html" style="color:rgb(0,0,0)">Pedro</a>
-            <br>
-            <br>
-            <img style="width:200px;height:200px;" src="img/perro2.jpg">
-            <br>
-            <a href="juan.html" style="color:rgb(0,0,0)">Juan</a>
-            <br>
-            <br>
-            <img style="width:200px;height:200px" src="img/perro3.jfif">
-            <br>
-            <a href="diego.html" style="color:rgb(0,0,0)">Diego</a>
-
+        <div class="row">
+            <div class="col-12" style="text-align: center;">
+                <p> Ayuda a un Peludo es una organización sin fines de lucro, dedicada al rescate, 
+                    rehabilitación y reubicación de Perros abandonados. Realizamos, operativos 
+                    de esterilización y jornadas de adopción todas las semanas. Todos los perros 
+                    que entrega están esterilizados desde los dos meses de edad. Mantiene dos albergues 
+                    de gatos y una red de hogares temporales, que acogen a los gatos rescatados 
+                    en espera de su adopción definitiva. </p> 
+                <h1>Perros en adopción</h1>
+                <img style="width: 200px;height: 200px;" src="img/perro1.jfif">
+                <br>
+                <a href="pedro.html" style="color:rgb(0,0,0)">Pedro</a>
+                <br>
+                <br>
+                <img style="width:200px;height:200px;" src="img/perro2.jpg">
+                <br>
+                <a href="juan.html" style="color:rgb(0,0,0)">Juan</a>
+                <br>
+                <br>
+                <img style="width:200px;height:200px" src="img/perro3.jfif">
+                <br>
+                <a href="diego.html" style="color:rgb(0,0,0)">Diego</a>
+            </div>
         </div>
     </div>  
   </div>   
