--- a/diego.html
+++ b/diego.html
@@ -5,21 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" 
+    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link type="text/css" rel="stylesheet" href="sryles/style.css">
 
 </head>
 <body>
-    <div>
-        <ul>
-            <li><a href="gatos.html">gatos</a></li>
-            <li><a href="perros.html">perros</a></li>
-        </ul>
+    <div class="container">
+        <div style="text-align: center;">
+            <ul>
+                <li><a href="pantallaprincipal.html">Inicio</a></li>
+                <li><a href="gatos.html">Gatos</a></li>
+                <li><a href="perros.html">Perros</a></li>
+            </ul>
         </div>
 
-        <a href="#" class="BANNER">
-            <img class="tamano_banner"  src="img/BANNER.jpg" alt="BANNER">
-        </a>
-
+        <div class="container">
+            <img src="img/banner.jfif"class="tamanio_banner"  alt="#">
+        </div>
+    <br>
     <h1 style="text-align: center;">Diego</h1>
     <br>
     <center><img src="img/perro3.jfif" alt="Cliqueame"></center>
@@ -29,5 +33,14 @@
         Edad: 4 meses <br> Esterilizado: no <br> Chip de rastreo: 8768</h3>
     <br>
     <br>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" 
+    crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" 
+    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" 
+    crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" 
+    integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" 
+    crossorigin="anonymous"></script>
 </body>
 </html>
