--- a/maximiliano.html
+++ b/maximiliano.html
@@ -20,15 +20,15 @@
                 <li><a href="perros.html">Perros</a></li>
             </ul>
                 
-            <a href="#" class="BANNER">
-                <img class="tamano_banner" src="img/BANNER.jpg" alt="BANNER">
-            </a>
+            <div class="container">
+                <img src="img/banner.jfif"class="tamanio_banner"  alt="#">
+            </div>
                 
-            <h1 style="text-align: center;" >Maximiliano!</h1>
+            <h1 style="text-align: center;" >Maximiliano:</h1>
             <br>
             <br>
             <img class="tamano" src="img/GATO3.jpg" alt="Cliqueame">
-            <h1 style="text-align: center;" >Descripcion del Maximiliano</h1>
+            <h1 style="text-align: center;" >Descripcion de Maximiliano</h1>
             <br>
             <h3 style="text-align: center;" >Sexo: masculino <br>
                 Edad: 2 meses <br> Esterilizado: no <br> Chip de rastreo: 1984</h3>
