--- a/pantallaprincipal.html
+++ b/pantallaprincipal.html
@@ -12,31 +12,37 @@
     
 </head>
 <body>
-    <div class="container-fluid">
-        <div style="text-align: center;"></div>
+    <div class="container">
+        <div style="text-align: center;">
             <ul>
-                <li><a href="gatos.html">gatos</a></li>
-                <li><a href="perros.html">perros</a></li>
+                <li><a href="gatos.html">Gatos</a></li>
+                <li><a href="perros.html">Perros</a></li>
             </ul>
-                <a href="#" class="BANNER">
-                <img class="tamano_banner" src="img/banner.jfif" alt="BANNER">
-                </a>
+
+                <div class="container">
+                    <img src="img/banner.jfif"class="tamanio_banner"  alt="#">
+                </div>
 
                 <h1 style="text-align: center;" class="Ayuda a un peludo">Ayuda a un peludo</h1>
-
-                <parrafo><h3 style="text-align: center;">Una ONG “Ayuda a un peludo” que trabaja con la adopción de animales que viven en la calle,<br>
-                    necesita con urgencia que ustedes creen un sitio web que permita mostrar las fichas de cada uno
-                    de los animalitos que están disponibles para su adopción. </h3></parrafo>
-                    <br>
-                    <br>
-                <titulo><h3 style="text-align: center;">Encargados:</h3></titulo>
-                <h3 style="text-align: center;">Luis Huircan - Cargo: Veterinario <br>
-                    Maximiliano Urrejola - Cargo: Rescatista.</h3>
-                <br>
-                <title2><h1 style="text-align: center;">Nuestra seccion de ayuda:</h1></title2>
-                <br>
-                <a><center><img class="tamano" src="img/perro1.jfif" alt="Perros"></a></center>
-                <a><center><img class="tamano" src="img/GATO1.jpg" alt="gatos"></a> <a href="gatos.html"></a> </center>
+                <div class="row">
+                    <div class="col-12" style="text-align: center;">
+                        <p> <h3> ONG “Ayuda a un peludo” que trabaja con la adopción de animales que viven en la calle,
+                            necesita con urgencia que ustedes creen un sitio web que permita mostrar las fichas de cada uno
+                            de los animalitos que están disponibles para su adopción.</h3>
+                        </p>               
+                        <br>
+                        <br>
+                        <titulo><h3 style="text-align: center;">Encargados:</h3></titulo>
+                        <h3 style="text-align: center;">Luis Huircan - Cargo: Veterinario. <br>
+                            Maximiliano Urrejola - Cargo: Rescatista. <br> Vicente cabello - cargo: personal auxiliar.</h3>
+                        <br>
+                        <title2><h1 style="text-align: center;">Nuestra seccion de ayuda:</h1></title2>
+                        <br>
+                        <img style="width: 300px;height: 300px;" src="img/perro1.jfif"><br><br>
+                        <img style="width: 300px;height: 300px;" src="img/GATO1.jpg"></a>
+    
+                    </div>         
+                </div>
         </div>
     </div>
    
