--- a/pedro.html
+++ b/pedro.html
@@ -13,16 +13,15 @@
     <link type="text/css" rel="stylesheet" href="sryles/style.css">
 </head>
 <body>
-    <div class="container-fluid">
-        <ul>
-            <li><a href="pantallaprincipal.html">Inicio</a></li>
-            <li><a href="gatos.html">gatos</a></li>
-            <li><a href="perros.html">perros</a></li>
-        </ul>
-        <div class="row">
-            <div class="col-12">
-                <img class="tamano_banner" src="img/banner.jfif" alt="BANNER">
-            </div>
+    <div class="container">
+        <div style="text-align: center;">
+            <ul>
+                <li><a href="pantallaprincipal.html">Inicio</a></li>
+                <li><a href="gatos.html">Gatos</a></li>
+                <li><a href="perros.html">Perros</a></li>
+            </ul>
+        <div class="container">
+            <img src="img/banner.jfif"class="tamanio_banner"  alt="#">
         </div>
     </div>
     <div class="row">
