--- a/gatos.html
+++ b/gatos.html
@@ -22,9 +22,9 @@
                 <li><a href="perros.html">Perros</a></li>
             </ul>
             
-            <a href="#" class="BANNER">
-                <img class="tamano_banner" src="img/banner.jfif" alt="BANNER">
-            </a>
+            <div class="container">
+                <img src="img/banner.jfif"class="tamanio_banner"  alt="#">
+            </div>
 
             <br>
             <h1 style="text-align: center;">Gatos en adopcion!</h1>
