--- a/perros.html
+++ b/perros.html
@@ -13,26 +13,24 @@
     <link type="text/css" rel="stylesheet" href="sryles/style.css">
 </head>
 <body>
-  <div class="container-fluid">
-    <div style="text-align: center;">
-        <ul>
-            <li><a href="pantallaprincipal.html">Inicio</a></li>
-            <li><a href="gatos.html">gatos</a></li>
-            <li><a href="perros.html">perros</a></li>
-        </ul>
-        <div class="row">
-            <div class="col-12">
-                <img class="tamano_banner" src="img/banner.jfif" alt="BANNER">
-            </div>
+    <div class="container">
+        <div style="text-align: center;">
+            <ul>
+                <li><a href="pantallaprincipal.html">Inicio</a></li>
+                <li><a href="gatos.html">Gatos</a></li>
+                <li><a href="perros.html">Perros</a></li>
+            </ul>
+        <div class="container">
+            <img src="img/banner.jfif"class="tamanio_banner"  alt="#">
         </div>
         <div class="row">
             <div class="col-12" style="text-align: center;">
-                <p> Ayuda a un Peludo es una organización sin fines de lucro, dedicada al rescate, 
+                <p><h3> Ayuda a un Peludo es una organización sin fines de lucro, dedicada al rescate, 
                     rehabilitación y reubicación de Perros abandonados. Realizamos, operativos 
                     de esterilización y jornadas de adopción todas las semanas. Todos los perros 
                     que entrega están esterilizados desde los dos meses de edad. Mantiene dos albergues 
                     de gatos y una red de hogares temporales, que acogen a los gatos rescatados 
-                    en espera de su adopción definitiva. </p> 
+                    en espera de su adopción definitiva.</h3> </p> 
                 <h1>Perros en adopción</h1>
                 <img style="width: 200px;height: 200px;" src="img/perro1.jfif">
                 <br>
