--- a/pedro.html
+++ b/pedro.html
@@ -10,7 +10,7 @@
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" 
     crossorigin="anonymous">
     <!----->
-    <link type="text/css" rel="stylesheet" href="sryles/estilo_perros.css">
+    <link type="text/css" rel="stylesheet" href="styles/estilo_perros.css">
 </head>
 <body>
     <div class="container-fluid">
@@ -21,7 +21,7 @@
             </ul>
             <div class="row">
                 <div class="col-md-12 col-sm-12">
-                    <img class="baner" src="img/BANNER.jpg">
+                    <img class="baner" src="img/banner.jfif">
                 </div>
             </div>
         <div class="row">
