--- a/perros.html
+++ b/perros.html
@@ -26,12 +26,12 @@
     </div>
     <div class="row" style="font-family:Arial, Helvetica, sans-serif;">
         <div class="col-md-12 col-sm-12" style="text-align: center;">
-            <p> Ayuda a un Peludo es una organización sin fines de lucro, dedicada al rescate, 
+            <p><H3> Ayuda a un Peludo es una organización sin fines de lucro, dedicada al rescate, 
                 rehabilitación y reubicación de Perros abandonados. Realizamos, operativos 
                 de esterilización y jornadas de adopción todas las semanas. Todos los perros 
                 que entrega están esterilizados desde los dos meses de edad. Mantiene dos albergues 
                 de gatos y una red de hogares temporales, que acogen a los gatos rescatados 
-                en espera de su adopción definitiva. </p> 
+                en espera de su adopción definitiva. </H3></p> 
             <h1>Perros en adopción</h1>
             <img style="width: 200px;height: 200px;" src="img/perro1.jfif">
             <br>
