--- a/Joadino.html
+++ b/Joadino.html
@@ -7,36 +7,71 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" 
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link type="text/css" rel="stylesheet" href="styles/style.css">
+    <link type="text/css" rel="stylesheet" href="styles/stylegatos.css">
 </head>
 
 
 <body>
-    <div class="container">
-        <div style="text-align: center;">
-            <ul>
-                <li><a href="pantallaprincipal.html">Inicio</a></li>
-                <li><a href="gatos.html">Gatos</a></li>
-                <li><a href="perros.html">Perros</a></li>
-            </ul>
-        
-            <div class="container">
-                <img src="img/banner.jfif"class="tamanio_banner"  alt="#">
+    <div class="container-fluid">
+        <ul class="barra_superior">
+            <li class="indice"><a href="pantallaprincipal.html">Inicio</a></li>
+            <li class="indice"><a href="gatos.html">gatos</a></li>
+            <li class="indice"><a href="perros.html">perros</a></li>
+        </ul>
+        <div class="row">
+            <div class="col-md-12 col-sm-12">
+                <img class="baner" src="img/banner.jfif">
             </div>
-
-            <h1 style="text-align: center;" >Joadiño:</h1>
-            <br>
-            <br>
-            <img class="tamano" src="img/GATO1.jpg" alt="Cliqueame">
-            <h1 style="text-align: center;" >Descripcion de Joadiño</h1>
-            <br>
-            <h3 style="text-align: center;" >Sexo: masculino <br>
-                Edad: 3 meses <br> Esterilizado: si <br> Chip de rastreo: 6754</h3>
-            <br>
-            <br>
+        </div>
+        <div class="row">
+            <div class="col-md-12 col-sm-12" style="text-align: center;">
+                <h1>gatos en adopción</h1>
+                <img style="width: 200px; height:200px" src="img/GATO1.jpg">
+                <br>
+                <h2>Joadiño:</h2>
+                <br>
+                <p style="font-family:Arial, Helvetica, sans-serif;
+                font-weight:bold;">Sexo: masculino <br>
+                Edad: 1 año <br> Esterilizado: si <br> 
+                Chip de rastreo: 6754
+                </p>
+            </div>
+    </div>
+     <!--Banner inferior, aquí se muestran los datos de contacto-->
+     <div class="row" style="background-color:rgb(27, 108, 0);
+     color:rgb(255, 255, 255)">
+        <div class="col-md-5 col-sm-5">
+            <h1>Contacto</h1>
+            <p>AV Los Michis #1311, Huechuraba, Santiago.</p>
+            <p>+56 9 8221 8600 / +56 9 5648 0868</p>
+            <p>ayudapeludo13@gmail.com</p>
+        </div>
+        <div class="col-md-7 col-sm-7">
+            <h1 style="text-align: center;">Síguenos</h1>
+            <ul class="logos_rrss"> 
+                <li class="iconos">
+                    <a href="https://www.instagram.com" target="_blank"> 
+                        <img style="width:50px;height:50px;" 
+                        src="img/logo_ig.jpg">
+                    </a>
+                </li>
+                <li class="iconos">
+                    <a href="https://www.facebook.com" target="_blank">   
+                        <img style="width:50px;height:50px;" 
+                        src="img/logo_fb.jpg">
+                    </a>
+                </li>
+                <li class="iconos">
+                    <a href="https://www.tiktok.com" target="_blank"> 
+                        <img style="width:50px;height:50px;" 
+                        src="img/logo_tktk.jpg">
+                    </a>
+                </li>
+            </ul> 
         </div>
     </div>
-    
+    <!---->
+    <!--Links bootstrap JS-->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" 
         crossorigin="anonymous"></script>
@@ -46,6 +81,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" 
         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" 
         crossorigin="anonymous"></script>
+    <!---->
 </body>
 </html>
 
