--- a/gatos.html
+++ b/gatos.html
@@ -8,7 +8,7 @@
     <title>Ayuda a un Peludo!</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" 
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link type="text/css" rel="stylesheet" href="styles/style.css">
+    <link type="text/css" rel="stylesheet" href="styles/stylegatos.css">
 
 </head>
 
@@ -20,45 +20,77 @@
             <li class="indice"><a href="gatos.html">gatos</a></li>
             <li class="indice"><a href="perros.html">perros</a></li>
         </ul>
-            
-            <div class="container">
-                <img src="img/banner.jfif"class="tamanio_banner"  alt="#">
+        <div class="row">
+            <div class="col-md-12 col-sm-12">
+                <img class="baner" src="img/banner.jfif">
             </div>
-
-            <br>
-            <h1 style="text-align: center;">Gatos en adopcion!</h1>
-            <br>
-            <h1 style="text-align: center;">Nuestros gatos que buscan familia!</h1>
-            <br>
-            <h3 style="text-align: center;">Es una organización sin fines de lucro, dedicada al rescate, 
-                rehabilitación y reubicación de gatos abandonados. Realiza, operativos 
-                de esterilización y jornadas de adopción todas las semanas. Todos los gatos 
-                que entrega están esterilizados desde los dos meses de edad. Mantiene dos albergues 
-                de gatos y una red de hogares temporales, que acogen a los gatos rescatados 
-                en espera de su adopción definitiva. </h3>  
-            <br>
-            <br>
-            <img class="tamano" src="img/GATO1.jpg" alt="Cliqueame">
-            <a href="Joadino.html"> 
-                <h3 style="text-align: center;">Joadiño</h3>
-            </a>
-            <br><br>
-            <img class="tamano" src="img/GATO2.jpg" alt="Cliqueame"/>
-                <a href="Jonyboy.html"> 
-                    <h3 style="text-align: center;">Jony boy</h3>
-                </a>
-            <br><br>
-            <img class="tamano" src="img/GATO3.jpg" alt="Cliqueame">
-                <a href="maximiliano.html"> 
-                    <h3 style="text-align: center;"> Maximiliano</h3>
-                </a>
-            <br><br>
         </div>
+            <div class="row" style="font-family:Arial, Helvetica, sans-serif;">
+                <div class="col-md-12 col-sm-12" style="text-align: center;">
+                    <p><h3> Es una organización sin fines de lucro, dedicada al rescate, 
+                        rehabilitación y reubicación de gatos abandonados. Realiza, operativos 
+                        de esterilización y jornadas de adopción todas las semanas. Todos los gatos 
+                        que entrega están esterilizados desde los dos meses de edad. Mantiene dos albergues 
+                        de gatos y una red de hogares temporales, que acogen a los gatos rescatados 
+                        en espera de su adopción definitiva. 
+                    </h3></p> 
+                        <h1>gatos en adopción</h1><br>
+                        <h1 style="text-align: center;">Nuestros gatos que buscan familia!</h1>
+                        <br>
+                        <img style="width: 200px;height: 200px;" src="img/GATO1.jpg">
+                        <br>
+                        <a href="Joadino.html" target="_blank" style="color:rgb(0,0,0);
+                        font-weight:bold">Joadiño</a>
+                        <br>
+                        <br>
+                        <img style="width:200px;height:200px;" src="img/perro2.jpg">
+                        <br>
+                        <a href="Jonyboy.html" target="_blank" style="color:rgb(0,0,0);
+                        font-weight:bold">Jony boy</a>
+                        <br>
+                        <br>
+                        <img style="width:200px;height:200px" src="img/GATO2.jpg">
+                        <br>
+                        <a href="maximiliano.html" target="_blank" style="color:rgb(0,0,0);
+                        font-weight:bold">Maximiliano</a>
+                </div>             
+            </div>            
     </div>
-    
-
-
-
+        <!--Banner inferior, aquí se muestran los datos de contacto-->
+        <div class="row" style="background-color:rgb(27, 108, 0);
+        color:rgb(255, 255, 255)">
+      <div class="col-md-5 col-sm-5">
+          <h1>Contacto</h1>
+          <p>AV Los Michis #1311, Huechuraba, Santiago.</p>
+          <p>+56 9 8221 8600 / +56 9 5648 0868</p>
+          <p>ayudapeludo13@gmail.com</p>
+      </div>
+      <div class="col-md-7 col-sm-7">
+          <h1 style="text-align: center;">Síguenos</h1>
+          <ul class="logos_rrss"> 
+              <li class="iconos">
+                  <a href="https://www.instagram.com" target="_blank"> 
+                      <img style="width:50px;height:50px;" 
+                      src="img/logo_ig.jpg">
+                  </a>
+              </li>
+              <li class="iconos">
+                  <a href="https://www.facebook.com" target="_blank">   
+                      <img style="width:50px;height:50px;" 
+                      src="img/logo_fb.jpg">
+                  </a>
+              </li>
+              <li class="iconos">
+                  <a href="https://www.tiktok.com" target="_blank"> 
+                      <img style="width:50px;height:50px;" 
+                      src="img/logo_tktk.jpg">
+                  </a>
+              </li>
+          </ul> 
+      </div>
+  </div>
+  <!---->
+    <!--Links bootstrap JS-->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" 
         crossorigin="anonymous"></script>
@@ -68,5 +100,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" 
         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" 
         crossorigin="anonymous"></script>
+      <!---->
 </body>
 </html>
