--- a/gatos.html
+++ b/gatos.html
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@600&display=swap" rel="stylesheet">
     <!---->
     <!-- Icono de la pestaña-->
-    <link rel="shortcut icon" href="img/icono_dos.ico">
+    <link rel="shortcut icon" href="img/icono_tres.jpg">
 </head>
 <body>
     <div class="container-fluid">
