--- a/Joadino.html
+++ b/Joadino.html
@@ -11,7 +11,7 @@
     <!---->
     <link type="text/css" rel="stylesheet" href="styles/stylegatos.css">
     <!-- Icono de la pestaña-->
-    <link rel="shortcut icon" href="img/icono_dos.ico">
+    <link rel="shortcut icon" href="img/icono_tres.jpg">
 </head>
 <body>
     <div class="container-fluid">
