--- a/juan.html
+++ b/juan.html
@@ -12,7 +12,7 @@
     <!----->
     <link type="text/css" rel="stylesheet" href="styles/estilo_perros.css">
     <!-- Icono de la pestaña-->
-    <link rel="shortcut icon" href="img/icono_dos.ico">
+    <link rel="shortcut icon" href="img/icono_tres.jpg">
 </head>
 <body>
     <div class="container-fluid">
