--- a/pantallaprincipal.html
+++ b/pantallaprincipal.html
@@ -22,8 +22,9 @@
 <body>
     <div class="container-fluid">
         <ul class="barra_superior">
-            <li class="indice"><a href="gatos.html">gatos</a></li>
-            <li class="indice"><a href="perros.html">perros</a></li>
+            <li class="indice"><a href="pantallaprincipal.html">Inicio</a></li>
+            <li class="indice"><a href="gatos.html">Gatos</a></li>
+            <li class="indice"><a href="perros.html">Perros</a></li>
         </ul>
         <div class="row">
             <div class="col-md-12 col-sm-12">
@@ -42,7 +43,7 @@
                 <h2 style="text-align: center;">Encargados:</h2>
                 <p style="text-align: center;">Luis Huircan - Cargo: Veterinario. <br>
                     Maximiliano Urrejola - Cargo: Rescatista. <br> 
-                    Vicente Cabello - cargo: personal auxiliar.
+                    Vicente Cabello - Cargo: Personal Auxiliar.
                 </p>
                 <h3 style="text-align: center;">Nuestra seccion de ayuda:</h3>
                 <br>
