--- a/perros.html
+++ b/perros.html
@@ -41,6 +41,7 @@
                 en espera de su adopción definitiva.
             </p> 
             <h1>Perros en adopción</h1>
+            <h3>Nuestros perros que buscan familia!</h3>
             <img style="width: 200px;height: 200px;" src="img/perro1.jfif">
             <br>
             <a href="pedro.html" target="_blank" style="color:rgb(0,0,0);
