--- a/pantallaprincipal.html
+++ b/pantallaprincipal.html
@@ -23,8 +23,8 @@
     <div class="container-fluid">
         <ul class="barra_superior">
             <li class="indice"><a href="pantallaprincipal.html">Inicio</a></li>
-            <li class="indice"><a href="gatos.html">Gatos</a></li>
-            <li class="indice"><a href="perros.html">Perros</a></li>
+            <li class="indice"><a href="gatos.html" target="_blank">Gatos</a></li>
+            <li class="indice"><a href="perros.html" target="_blank">Perros</a></li>
         </ul>
         <div class="row">
             <div class="col-md-12 col-sm-12">
