--- a/perros.html
+++ b/perros.html
@@ -23,7 +23,7 @@
   <div class="container-fluid">
     <ul class="barra_superior">
         <li class="indice"><a href="pantallaprincipal.html">Inicio</a></li>
-        <li class="indice"><a href="gatos.html">gatos</a></li>
+        <li class="indice"><a href="gatos.html" target="_blank">gatos</a></li>
         <li class="indice"><a href="perros.html">perros</a></li>
     </ul>
     <div class="row">
