--- a/gatos.html
+++ b/gatos.html
@@ -23,7 +23,7 @@
         <ul class="barra_superior">
             <li class="indice"><a href="pantallaprincipal.html">Inicio</a></li>
             <li class="indice"><a href="gatos.html">gatos</a></li>
-            <li class="indice"><a href="perros.html">perros</a></li>
+            <li class="indice"><a href="perros.html" target="_blank">perros</a></li>
         </ul>
         <div class="row">
             <div class="col-md-12 col-sm-12">
