--- a/gatos.html
+++ b/gatos.html
@@ -23,7 +23,7 @@
         <ul class="barra_superior">
             <li class="indice"><a href="pantallaprincipal.html">Inicio</a></li>
             <li class="indice"><a href="gatos.html">gatos</a></li>
-            <li class="indice"><a href="perros.html" target="_blank">perros</a></li>
+            <li class="indice"><a href="perros.html">perros</a></li>
         </ul>
         <div class="row">
             <div class="col-md-12 col-sm-12">
@@ -44,19 +44,19 @@
                         <br>
                         <img style="width: 200px;height: 200px;" src="img/GATO1.jpg">
                         <br>
-                        <a href="Joadino.html" target="_blank" style="color:rgb(0,0,0);
+                        <a href="Joadino.html" style="color:rgb(0,0,0);
                         font-weight:bold">Joadiño</a>
                         <br>
                         <br>
                         <img style="width:200px;height:200px;" src="img/GATO2.jpg">
                         <br>
-                        <a href="Jonyboy.html" target="_blank" style="color:rgb(0,0,0);
+                        <a href="Jonyboy.html" style="color:rgb(0,0,0);
                         font-weight:bold">Jony boy</a>
                         <br>
                         <br>
                         <img style="width:200px;height:200px" src="img/GATO3.jpg">
                         <br>
-                        <a href="maximiliano.html" target="_blank" style="color:rgb(0,0,0);
+                        <a href="maximiliano.html" style="color:rgb(0,0,0);
                         font-weight:bold">Maximiliano</a>
                 </div>             
             </div>            
