--- a/perros.html
+++ b/perros.html
@@ -44,19 +44,19 @@
             <h3>Nuestros perros que buscan familia!</h3>
             <img style="width: 200px;height: 200px;" src="img/perro1.jfif">
             <br>
-            <a href="pedro.html" target="_blank" style="color:rgb(0,0,0);
+            <a href="pedro.html" style="color:rgb(0,0,0);
             font-weight:bold">Pedro</a>
             <br>
             <br>
             <img style="width:200px;height:200px;" src="img/perro2.jpg">
             <br>
-            <a href="juan.html" target="_blank" style="color:rgb(0,0,0);
+            <a href="juan.html" style="color:rgb(0,0,0);
             font-weight:bold">Juan</a>
             <br>
             <br>
             <img style="width:200px;height:200px" src="img/perro3.jfif">
             <br>
-            <a href="diego.html" target="_blank" style="color:rgb(0,0,0);
+            <a href="diego.html" style="color:rgb(0,0,0);
             font-weight:bold">Diego</a>
             <br>
         </div>
